<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/product_images_viewpager"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name">

    </androidx.viewpager.widget.ViewPager>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/viewPager_Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/product_images_viewpager"
        android:contentDescription="@string/page_indicator_description"
        app:tabBackground="@drawable/dot_selector"
        app:tabIndicatorHeight="0dp"
        app:tabRippleColor="@null" />

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_btn"
        android:textSize="20sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:backgroundTint="#703F51B5"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/nextBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_btn"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:backgroundTint="#3F51B5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/gotItBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gotIt_btn"
        android:textSize="20sp"
        android:visibility="gone"
        android:textColor="@color/white"
        android:backgroundTint="#3F51B5"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>